--- a/src/frontend/.gitignore
+++ b/src/frontend/.gitignore
@@ -17,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-src/package-lock.json
+src/frontend/package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
