--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
+    "typed.js": "^2.0.132",
     "unfetch": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
