--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.client.registration.google.client-id=571899555230-k1pgmsofdnoe3d7ccfbnuahotmh3m041.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
