--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ build/
 **/yarn-debug.log*
 **/yarn-error.log*
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
