--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework=DEBUG
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-spring.data.rest.base-path=/api
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.springframework.security=TRACE
+#logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+#spring.data.rest.base-path=/api
 
 spring.security.oauth2.client.registration.google.client-id=571899555230-k1pgmsofdnoe3d7ccfbnuahotmh3m041.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
