Made Changes to frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gamereviewz
+spring.datasource.url=jdbc:postgresql://gamereviewz.cehg9hjtjmq4.us-east-1.rds.amazonaws.com:5432/gamereviewz
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
